create a new domain name and bind this page to note.bottlefish.cn

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Bottlefish's Notebook
-site_url: https://note.bottlefish.cc/
+site_url: https://note.bottlefish.cn/
 repo_name: BottleFish326/notes
 repo_url: https://github.com/BottleFish326/notes/
 edit_uri: tree/main/docs/
