--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,19 @@ theme:
   language: 'zh'
   icon:
     logo: material/notebook-outline
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
   custom_dir: overrides
   features:
     - content.code.annotate
@@ -51,6 +64,7 @@ markdown_extensions:
       anchor_linenums: true
   - pymdownx.arithmatex:
       generic: true
+  - admonition
 
 validation:
   nav:
