add Kronos and update the structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,6 +135,8 @@ plugins:
       lang:
         - en
         - zh
+  - minify:
+      minify_html: true
   - awesome-pages
   - glightbox:
       width: 80%
