--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ edit_uri: edit/main/docs/
 site_description: Bottlefish's Notebook
 
 theme:
-  name: 'material'
-  language: 'en'
+  name: material
+  language: zh
   icon:
     logo: material/notebook-outline
     repo: fontawesome/brands/github
